# django-snacks

django_snacks/: README.md  pyproject.toml
django_snacks/snacks_project/: db.sqlite3  manage.py
django_snacks/snacks_project/db/: tests.py  urls.py  views.py
django_snacks/snacks_project/snacks/: tests.py  urls.py  views.py
django_snacks/snacks_project/snacks_project/: asgi.py  settings.py  urls.py  wsgi.py
django_snacks/snacks_project/templates/: about.html  bulma.html  chichi.html  db_base.html  db_home.html  db_navbar.html  gohan.html  goku.html  home.html  humans.html  krillin.html  roshi.html  saiyans.html  snacks_base.html  tien.html  vegeta.html  yamcha.html
