[tool.poetry]
name = "django_snacks"
version = "0.1.0"
description = ""
authors = ["micgreene <mgreene11111@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
